--- a/assets/sass/_signup-form-styles.scss
+++ b/assets/sass/_signup-form-styles.scss
@@ -44,7 +44,9 @@
 			cursor: pointer;
 			background-color: $blue_color;
 			border-radius: 20px;
-			display: inline-block;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 			font-weight: 600;
 
 			&:hover {
@@ -68,5 +70,36 @@
 				}
 			}
 		}
+
+		.cherry-popup-signup__new-user {
+			display: flex;
+			align-items: center;
+			margin: 20px 0;
+
+			span {
+				text-align: center;
+				flex: 1 1 auto;
+				margin: 0 25px;
+			}
+
+			&:before {
+				flex: 1 1 auto;
+				display:block;
+				position: relative;
+				height: 1px;
+				background-color: $grey_color_3;
+				content:'';
+			}
+
+			&:after {
+				flex: 1 1 auto;
+				display:block;
+				position: relative;
+				height: 1px;
+				background-color: $grey_color_3;
+				content:'';
+			}
+		}
+
 	}
 }
