--- a/assets/sass/_signup-form-styles.scss
+++ b/assets/sass/_signup-form-styles.scss
@@ -101,5 +101,15 @@
 			}
 		}
 
+		.cherry-popup-signup__login-user {
+			display: flex;
+			justify-content: center;
+			margin: 20px 0;
+
+				span {
+					margin: 0 5px;
+				}
+		}
+
 	}
 }
